# flowy

./: .gitignore  .gitmodules  .lldbinit  CLAUDE.md  Cargo.toml  README.md  TODO.md  WORKFLOW_IMPLEMENTATION_PLAN.md  config.json  config.toml  conformance_test.sh  debug_simple.wdl  debug_struct_literal.wdl  debug_struct_simple.wdl  flowy  flowy_api.json  gen_files_task.wdl  gen_files_task_input.json  go.mod  greetings.txt  hello.input  hello.wdl  http_wc_input.json  http_wc_workflow.wdl  minimal_test.wdl  mixed_input_test.json  mixed_input_test.wdl  no_vars_test.wdl  output_reference_input.json  output_reference_test.wdl  package-lock.json  package.json  read_object_task.wdl  read_objects_task.wdl  spec.sh  struct_type_implementation_summary.md  test_advanced_arrays.wdl  test_all_map_functions.wdl  test_backward_compat.json  test_empty_arrays.wdl  (+24 more)
.claude/: config.json
.serena/: project.yml
designdoc/: storage.md  todo.md
docs/: daemon_plan.md  daemon_usage.md  flowy_server_client_usage.md
examples/: basic_inputs.json  basic_task.wdl  docker_config.json  docker_hello.wdl  docker_hello_inputs.json  docker_simple.wdl  hello_world.wdl  hello_world_inputs.json  no_docker_config.json  requirements_example.json  requirements_example.wdl  simple_command.wdl  simple_docker.wdl  simple_task.wdl  simple_task_inputs.json  variable_test.wdl
flowydeamon/: .gitignore  api_default.go  configuration.go  flowy_api.json  flowydeamon.go  generate_client.sh  model__api_do_eval_post_request.go  model__api_get_exectable_job_post_200_response_inner.go  model_job_finished_request.go  (+1 more)
(+233 files in other folders)
