[package]
name = "miniwdl-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of miniwdl - Workflow Description Language (WDL) parser and runtime"
license = "MIT"
repository = "https://github.com/chanzuckerberg/miniwdl"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
nom = "7.1"
nom_locate = "4.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.21.0"
