[package]
name = "miniwdl-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
description = "Rust port of miniwdl - Workflow Description Language (WDL) parser and runtime"
license = "MIT"
repository = "https://github.com/chanzuckerberg/miniwdl"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
nom = "7.1"
nom_locate = "4.0"
regex = "1.10"
chrono = "0.4"
bollard = "0.14"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
url = "2.5"
glob = "0.3"
tempfile = "3.21.0"
indexmap = { version = "2.2", features = ["serde"] }

[[bin]]
name = "spec_tests"
path = "src/bin/spec_tests.rs"

[dev-dependencies]
tempfile = "3.21.0"
